Don't leave out the HTML, CSS, and JS.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README LICENSE
+include README.rst LICENSE
 exclude examples
 recursive-include switchboard/admin/templates *
 recursive-include switchboard/admin/public *
