--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: python
 
-python:
-  - "2.7"
+install: make install
 
-# command to install dependencies
-install: make sys-deps && make install
-
-# command to run tests
 script: make test
