--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-pymongo==2.3
-blinker==1.2
-WebOb==0.9
-Mako==0.9.0
-nose==1.3.4
-mock==1.0.1
-bobo==2.3.0
+--index-url https://pypi.python.org/simple/
+
+-e .
