--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: python
 
+services:
+  - mongodb
+
 sudo: false
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 
 install: make install
 
-script: make test
+script: make test functional-test
