--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ sudo: false
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - pip install codecov
 
 install: make install
 
-script: make test functional-test
+script: make test-coverage functional-test
+
+after_success: codecov
