--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: python
 
-services:
-  - mongodb
+addons:
+  firefox: "latest"
 
 sudo: false
 
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - pip install codecov
+  - npm install -g geckodriver
 
 install: make install
 
