Fix failing tests, run tests with tox

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,14 @@
 envlist = py27
 
 [testenv]
-commands = nosetests
+commands = nosetests {posargs}
 deps =
     nose
     mock
-    bobo
+
+[testenv:coverage]
+deps =
+    {[testenv]deps}
+    coverage
+commands =
+    nosetests --with-coverage --cover-package=switchboard
