--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: python
+python: 2.7
+
+# only needed for example/tests.py:TestAdmin.test_switch_history
+services:
+  - mongodb
 
 addons:
   firefox: "latest"
@@ -9,11 +14,12 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-  - pip install codecov
   - npm install -g geckodriver
 
 install: make install
 
 script: make test-coverage functional-test
 
-after_success: codecov
+after_success:
+  - pip install codecov
+  - codecov
