Support new pymongo.  Fixes #33

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,15 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27
+envlist = py27-pymongo{24,3}
 
 [testenv]
 commands = nosetests {posargs}
 deps =
     nose
     mock
+    pymongo24: pymongo==2.4
+    pymongo3: pymongo
 
 [testenv:coverage]
 deps =
