--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,29 @@
 language: python
-python: 2.7
 
-# only needed for example/tests.py:TestAdmin.test_switch_history
+# https://docs.travis-ci.com/user/languages/python/#using-tox-as-the-build-script
+dist: xenial   # required for Python >= 3.7
+matrix:
+  include:
+    # for each version of python, run each tox build separately
+    - python: 2.7
+      env: TOXENV=py27-pymongo24
+    - python: 2.7
+      env: TOXENV=py27-pymongo3
+
+    - python: 3.6
+      env: TOXENV=py36-pymongo24
+    - python: 3.6
+      env: TOXENV=py36-pymongo3
+
+    - python: 3.7
+      env: TOXENV=py37-pymongo24
+    - python: 3.7
+      env: TOXENV=py37-pymongo3
+
+
 services:
+  - xvfb
+  # only needed for example/tests.py:TestAdmin.test_switch_history
   - mongodb
 
 addons:
@@ -11,14 +32,11 @@ addons:
 sudo: false
 
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
   - npm install -g geckodriver
 
 install: make install
 
-script: make test-coverage functional-test
+script: make test test-coverage functional-test
 
 after_success:
   - pip install codecov
