--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,36,37}-pymongo{24,3}
+envlist = py{37}
 
 [testenv]
 commands = nosetests {posargs}
 deps =
     nose
     mock
-    pymongo24: pymongo==2.4
-    pymongo3: pymongo
+    pymongo
 
 [testenv:coverage]
 deps =
