Replace nose with pytest
Used https://github.com/pytest-dev/nose2pytest latest for conversion

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@
 envlist = py{37}
 
 [testenv]
-commands = nosetests {posargs}
+commands = pytest {posargs}
 deps =
-    nose
+    pytest
     mock
     pymongo
 
@@ -18,4 +18,5 @@ deps =
     {[testenv]deps}
     coverage
 commands =
-    nosetests --with-coverage --cover-package=switchboard
+    # or use pytest-cov package?
+    coverage run -m pytest
