Replace .travis.yml with Github action

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,5 @@ deps =
 commands =
     # or use pytest-cov package?
     coverage run -m pytest
+    # "codecov" needs xml format, not .coverage file:
+    coverage xml
