use codecov token to avoid API errors
Recommended at https://community.codecov.com/t/upload-issues-unable-to-locate-build-via-github-actions-api/3954

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,3 +76,4 @@ jobs:
           flags: tests-${{ matrix.python-version }}
           name: codecov-umbrella
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
